--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=currency-conversion
 server.port=8100
+
+eureka.client.register-with-eureka=true
+eureka.client.region=default
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
