--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ eureka.client.register-with-eureka=true
 eureka.client.region=default
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.fetch-registry=true
+
+spring.sleuth.sampler.probability=1.0
